syntax = "proto3";

package product;

service ProductService {
  rpc GetProductByName (GetProductByNameRequest) returns (ProductResponse);
  rpc Ping (PingRequest) returns (PingResponse);
}

message GetProductByNameRequest {
  string name = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  double price = 3;
  bool isDeleted = 4;
}

message PingRequest {}

message PingResponse {
  string message = 1;
}
